rendered/envs/demo/n8n/deployment-n8n.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
    reloader.stakater.com/auto: "true"
  labels:
    service: n8n
  name: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      service: n8n
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: n8n
    spec:
      containers:
        - args:
            - -c
            - n8n start
          command:
            - /bin/sh
          image: n8nio/n8n:1.95.0
          name: n8n
          ports:
            - containerPort: 5678
          resources:
            limits:
              memory: 500Mi
            requests:
              cpu: 500m
              memory: 250Mi
          volumeMounts:
            - mountPath: /home/node/.n8n
              name: n8n-claim0
      restartPolicy: Always
      volumes:
        - name: n8n-claim0
          persistentVolumeClaim:
            claimName: n8n-claim0
