rendered/envs/demo/n8n/service-n8n.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
  labels:
    service: n8n
  name: n8n
spec:
  ports:
    - name: "5678"
      port: 5678
      protocol: TCP
      targetPort: 5678
  selector:
    service: n8n
  type: LoadBalancer
