rendered/envs/demo/n8n/ingressroute-n8n.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
    coroot.com/custom-application-name: n8n
    external-dns.alpha.kubernetes.io/target: lb.demo.budd.ee
    kubernetes.io/ingress.class: traefik
  name: n8n
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`n8n.demo.budd.ee`)
      priority: 10
      services:
        - name: n8n
          port: 5678
